--- a/static/index.html
+++ b/static/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8" />
   <title>Pro MERN Stack</title>
   <script src=
-"https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js">
+    "https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.13.0/polyfill.js">
   </script>
   <script src=
-"https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js">
+    "https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js">
+  </script>
+  <script src=
+    "https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js">
   </script>
 </head>
 <body>
