--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,10 @@
   <script src=
     "https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js">
   </script>
+  <style>
+    table.bordered-table th, td {border: 1px solid silver; padding: 4px;}
+    table.bordered-table {border-collapse: collapse};
+  </style>
 </head>
 <body>
   <div id="contents"></div><!-- this is where our component will appear -->
